--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "start": "node server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "seed": "node seeds/index.js"
   },
   "repository": {
@@ -27,5 +27,8 @@
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.1"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
