updating server and html files

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "start": "node server.js",
   "scripts": {
     "test": "jest",
+    "start": "node server.js",
     "seed": "node seeds/index.js"
   },
   "repository": {
